[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-prometheus = "0.7.0"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
